--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -541,10 +541,10 @@ nav .branding img {
 
 .logo-slider img {
   height: auto;
-  max-height: 80px; /* uprav dle potřeby */
+  max-height: 80px;
   flex-shrink: 0;
 }
-  
+
 @keyframes slide-logos {
   0% {
     transform: translateX(0);
@@ -563,8 +563,6 @@ nav .branding img {
     animation-duration: 30s;
   }
 }
-
-
 
 /*CONTACTS*/
 .contacts {
@@ -741,3 +739,68 @@ footer h3 {
     margin-bottom: -155%;
   }
 }
+
+/* SLIDER */
+.slider-container {
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  -webkit-overflow-scrolling: touch;
+  max-width: 1300px;
+  margin: 150px auto;
+  padding: 20px 0;
+}
+
+.slider-flex {
+    display: flex;
+}
+
+.slider-container h2 {
+  text-align: start;
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  font-size: 40px;
+  letter-spacing: 0.03em;
+  line-height: 45px;
+  color: var(--color-primary);
+  margin-bottom: 20px;
+}
+
+.slider-text {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: 0.04em;
+  color: var(--color-primary);
+  max-width: 230px;
+  margin: 50px 80px 0 0;
+}
+
+.slider-item p {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  color: var(--color-primary);
+  margin-top: 10px;
+}
+
+.slider-track {
+  display: flex;
+  gap: 20px;
+  width: max-content; 
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  -webkit-overflow-scrolling: touch;
+}
+
+.slider-item {
+  flex: 0 0 300px;
+  scroll-snap-align: center;
+  text-align: center;
+}
+
+.slider-item img {
+  width: 300px;
+  height: auto;
+}
+
