--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -277,10 +277,10 @@ nav .branding img {
 }
 
 .close-btn {
-  font-size: 40px;
+  font-size: 45px;
   color: #333;
   cursor: pointer;
-  padding: 10px 20px;
+  padding: 5px;
   background: none;
   border: none;
 }
@@ -289,7 +289,7 @@ nav .branding img {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   font-size: 20px;
-  gap: 30px;
+  gap: 10px;
   letter-spacing: 0.05em;
   list-style: none;
   text-align: center;
@@ -307,9 +307,9 @@ nav .branding img {
   color: #333;
   padding: 16px 0;
   display: block;
-  font-size: 22px;
-  font-weight: 600;
-  letter-spacing: 0.04em;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.05em;
   width: 100%;
 }
 
@@ -345,7 +345,7 @@ nav .branding img {
     position: relative;
     z-index: 10000;
     font-size: 45px;
-    padding: 10px;
+    padding: 5px;
   }
 
   nav .branding img {
@@ -386,6 +386,7 @@ nav {
     display: flex;
     opacity: 1;
     pointer-events: auto;
+    padding: 25px
   }
 
   .blur-overlay {
