--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -261,6 +261,7 @@ nav .branding img {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  
 }
 
 .menu-logo {
@@ -270,10 +271,20 @@ nav .branding img {
   padding: 10px 0 30px 0;
 }
 
-.menu-logo img {
-  width: 120px;
-  height: auto;
-  object-fit: contain;
+.mobile-nav img {
+  width: 100%;
+  max-width: 150px;   
+  height: 100%;
+  display: block;
+  margin: 0 auto;
+  padding: 10px 0 30px 0; 
+}
+
+@media (max-width: 400px) {
+  .mobile-nav img {
+    max-width: 120px;
+    padding: 0;
+  }
 }
 
 .close-btn {
@@ -283,6 +294,10 @@ nav .branding img {
   padding: 5px;
   background: none;
   border: none;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 10;
 }
 
 .mobile-nav {
@@ -299,6 +314,9 @@ nav .branding img {
   align-items: center;
   margin: 0;
   padding: 0;
+  z-index: 1000;
+  position: absolute;
+  width: 50%;
 }
 
 .nav-link-mobile {
@@ -358,6 +376,10 @@ nav {
 
 }
 
+.mobile-menu {
+   position: relative;
+}
+
 .mobile-menu,
 .blur-overlay {
   display: none;
@@ -368,7 +390,7 @@ nav {
     display: none;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;  
     position: fixed;
     top: 0;
     left: 0;
@@ -386,7 +408,7 @@ nav {
     display: flex;
     opacity: 1;
     pointer-events: auto;
-    padding: 25px
+    padding: 25px;
   }
 
   .blur-overlay {
@@ -413,6 +435,8 @@ nav {
     z-index: 10002;
   }
 }
+
+
 
 
 /* ZKUŠENOSTI */
