--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -246,7 +246,7 @@ nav .branding img {
   text-decoration: none;
 }
 
-/* HAM MENU */
+/* HAM MENU ( NAV BAR ON MOBILE)*/
 
 .hamburger {
   display: none;
@@ -275,9 +275,10 @@ nav .branding img {
   width: 100%;
   max-width: 150px;   
   height: 100%;
+  max-height: 140px;
   display: block;
   margin: 0 auto;
-  padding: 10px 0 30px 0; 
+  padding: 10px 0px 30px 0px; 
 }
 
 @media (max-width: 400px) {
@@ -313,7 +314,7 @@ nav .branding img {
   flex-direction: column;
   align-items: center;
   margin: 0;
-  padding: 0;
+  padding: 30px 0px 0px 0px;
   z-index: 1000;
   position: absolute;
   width: 50%;
@@ -395,7 +396,7 @@ nav {
     top: 0;
     left: 0;
     width: 100vw;
-    height: 50vh; 
+    height: 60vh; 
     background: var(--background-primary);
     z-index: 10001;
     padding: 40px 20px 20px 20px;
@@ -414,10 +415,10 @@ nav {
   .blur-overlay {
     display: none;
     position: fixed;
-    top: 50vh;
+    top: 60vh;
     left: 0;
     width: 100vw;
-    height: 50vh;
+    height: 60vh;
     z-index: 10000;
     backdrop-filter: blur(16px);
     background: rgba(200, 176, 142, 0.18);
