--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,8 @@ body {
 
 html {
   scroll-behavior: smooth;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
  
 /* LINE */
@@ -824,68 +826,137 @@ nav {
   }
 }
 
-/*CONTACTS*/
+/*FOOTER*/
 
-.kontakt {
-  background-color: var(--background-primary);
+.contact-container {
+  background-color: #D6C29C;
 }
-
-.kontakt-info {
+.contact {
+  max-width: 1300px;
+  gap: 12px;
+  margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.contact-content {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+  font-size: 16px; 
+  letter-spacing: 0.04em;
+  color: #000;
+  flex: 1;
+}
+.contact-info {
+  justify-content: center;
+  align-items: center;
+  width: 370px;
+}
+.contact-content h2 {
+  font-size: 30px;
+  color: rgb(61, 61, 61);
+  font-family: "Raleway", sans-serif;
+}
+.contact-map {
+  width: 100%;
+  min-width: 0;
+  flex: 3;
+}
+.contact-info-cols,
+.contact-info-cols-second {
+  display: flex;
+  justify-content: flex-start;
   align-items: flex-start;
-  gap: 40px;
+  gap: 32px;
+  margin: 0 0 10px 0;
+  background: none;
+  max-width: 500px;
+  margin-left: 0;
+  margin-right: 0;
 }
 
-.kontakt-first,
-.kontakt-second {
+.contact-info-cols .col,
+.contact-info-cols-second .col {
   flex: 1;
+  color: var(--color-primary);
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
+  font-weight: 300;
+}
+
+.contact-info-cols .col {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.contact-info-cols .col:last-child {
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.contact-info-cols .col strong {
   color: var(--color-primary);
-}
-
-.kontakt-first p,
-.kontakt-second p {
-  margin: 10px 0;
-}
-
-.kontakt h2 {
-  font-family: "Raleway", sans-serif;
   font-weight: 600;
-  font-size: 40px;
-  letter-spacing: 0.03em;
-  line-height: 45px;
-  color: var(--color-primary);
-  margin-bottom: 20px;
+  font-size: 16px;
 }
 
-.kontakt-map {
+.contact-info-cols-second .col {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.contact-info-cols-second .col:last-child {
+  font-size: 16px;
+  font-weight: 300;
+  align-items: flex-start;
+}
+.contact-map iframe {
+  min-height: 400px;
+  border: none;
+  width: 100%;
+}
+.contact-placeholder {
   flex: 1;
 }
 
-.kontakt-map iframe {
-  width: 660px;
-  height: 500px;
-  border: none;
-  position: static;
-  margin-bottom: 0px;
-}
-
-@media (max-width: 768px) {
-  .kontakt-info {
+@media screen and (max-width: 980px) {
+  .contact {
     flex-direction: column;
-    gap: 30px;
   }
-
-  .kontakt-map,
-  .kontakt-map iframe {
-    width: 100%;
-    height: 300px;
+  .contact-content {
+    flex: 1;
+  }
+  .contact-map {
+    flex: 1;
+  }
+  .contact-placeholder {
+    display: none;
   }
 }
 
-/*FOOTER*/
+@media (max-width: 600px) {
+  .contact-info-cols,
+  .contact-info-cols-second {
+    flex-direction: row;
+    gap: 16px;
+    max-width: 100%;
+  }
+  .contact-info-cols .col,
+  .contact-info-cols-second .col {
+    font-size: 16px;
+    gap: 4px;
+  }
+  .contact-info-cols .col strong,
+  .contact-info-cols-second .col strong {
+    font-size: 16px;
+  }
+  .contact-info-cols .col .icon-phone {
+    width: 15px;
+    height: 15px;
+    margin-right: 5px;
+  }
+}
 
 footer {
   margin: 0px auto;
@@ -909,13 +980,11 @@ footer h3 {
     width: 100vw;
   }
 }
-
 /*gallery.hmtl*/
 .gallery {
   top: 0;
   z-index: 999;
 }
-
 .gallery-main {
   display: flex;
   flex-direction: column;
