--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -582,6 +582,8 @@ nav {
   text-align: center;
   padding: 10px 0;
   border-radius: 10px;
+  border: none;
+  outline: none;
   text-decoration: none;
   font-size: 18px;
   display: flex;
