--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -271,27 +271,29 @@ nav .branding img {
   flex-direction: column;
   align-items: center;
   padding: 10px 0 30px 0;
+  object-fit: contain;
 }
 
 .mobile-nav img {
   width: 100%;
   max-width: 150px;   
   height: 100%;
-  max-height: 140px;
+  max-height: 190px;
   display: block;
   margin: 0 auto;
-  padding: 10px 0px 30px 0px; 
+  padding: 30px 0px 25px 0px; 
+  object-fit: contain;
 }
 
 @media (max-width: 400px) {
   .mobile-nav img {
     max-width: 120px;
-    padding: 0;
+    padding: 0px;
   }
 }
 
 .close-btn {
-  font-size: 45px;
+  font-size: 55px;
   color: #333;
   cursor: pointer;
   padding: 5px;
@@ -316,7 +318,7 @@ nav .branding img {
   flex-direction: column;
   align-items: center;
   margin: 0;
-  padding: 30px 0px 0px 0px;
+  padding: 10px 0px 0px 0px;
   z-index: 1000;
   position: absolute;
   width: 50%;
@@ -375,6 +377,11 @@ nav .branding img {
 
 nav {
   padding: 15px;
+   display: flex;
+  align-items: center; /* KLÍČOVÉ: zarovná vertikálně */
+  justify-content: space-between;
+  height: 100px; 
+  box-sizing: border-box;
 }
 
 }
@@ -605,6 +612,7 @@ nav {
     grid-template-columns: repeat(2, 1fr);
     gap: 15px;
   }
+
 }
 
 @media (max-width: 480px) {
@@ -630,23 +638,32 @@ nav {
     font-size: 16px;
   }
 }
+.gallery-wrapper {
+  position: relative;
+  width: 100%;
+  max-width: 1200px;
+  margin: 30px auto;
+  padding: 0 20px;
+}
 
 .square2 {
+  position: absolute;
   width: 480px;
   height: 550px;
   background-color: #fff;
   border: 2px solid var(--color-secondary);
-  position: absolute;
-  left: 57%;
-  top: 160%;
+  right: 0px;
+  top: -28px;
   z-index: -1;
+  pointer-events: none;
 }
 
-@media (max-width: 1448px) {
+@media (max-width: 1024px) {
   .square2 {
     display: none;
   }
 }
+
 
 /* SLIDER */
 
