Update gallery layout

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1154,7 +1154,8 @@ footer h3 {
   }
 }
 
-/*gallery.hmtl*/
+/*GALLERY.HTML*/
+
 .gallery {
   top: 0;
   z-index: 999;
@@ -1187,6 +1188,22 @@ footer h3 {
   width: 100vw;
   height: 85%;
   z-index: -20;
+}
+
+@media (max-width: 768px) {
+   .gallery-background-left {
+    width: 100vw;
+    height: 55vh;
+    bottom: 0;
+    top: auto;
+    background-position: bottom center;
+  }
+
+ .gallery-background-right {
+    min-height: 55vh;
+    top: 0;
+    min-width: 100vw;
+  }
 }
 
 
