Ajust space between button and contacts in gallery.html

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -599,6 +599,7 @@ nav {
   justify-content: center;
   align-items: center;
   margin: 50px auto;
+  margin-bottom: 80px;
   line-height: 20px;
   letter-spacing: 0.05em;
   transition: background-color 0.2s;
@@ -643,7 +644,8 @@ nav {
   }
 
   .gallery-button {
-    margin: 30px auto;
+    margin: 40px auto;
+    margin-bottom: 80px;
     width: 330px;
     font-size: 16px;
   }
