--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -454,6 +454,7 @@ nav {
   padding: 90px 20px 20px 20px;
   max-width: 1200px;
   margin: 0 auto;
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center; 
@@ -551,6 +552,7 @@ nav {
   .zkusenosti-div {
     align-items: flex-start; 
     padding: 130px 20px 20px 20px;
+     margin-top: 75px;
   }
 }
 
