Adjust grid gap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -477,7 +477,7 @@ nav {
 .grid-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 100px;
+  gap: 50px 110px;
   justify-content: center; 
 }
 
